--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 author_logo: profile.png
 author: Patrick Medley
-author_bio: Hi, my name is Patrick Medley. I'm a web developer from Jamaica, with experience in React, Flask, and other technologies.
+author_bio: Hello, my name is Patrick Medley and I am from Jamaica 🇯🇲. In addition to being an avid sports fan and book enthusiast, I have a special passion for technology, especially in the fields of software engineering and computer science. My particular focus is on programming languages such as Python and Javascript. I am constantly learning and exploring what these languages can offer and how they can be used to develop high-quality, user-friendly applications.
 author_email: "patrickm@pgmja.com"
 author_location: Jamaica
 author_website_url: "https://sujaykundu.com"
