--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,34 +1,24 @@
 # Add Authors here
-johndoe:
-   name: John Doe
-   username: johndoe
-   site: http://johndoe.com
-   avatar: johndoe.png
-   bio: "Hi I a John, a Web Developer and Designer."
-   email: mail@johndoe.com
-   social:
-      - title: "github"
-        url: "https://github.com/johndoe"
-      - title: "linkedin"
-        url: "https://www.linkedin.com/in/johndoe"
-      - title: "youtube"
-        url: "https://www.youtube.com/channel/UCSfLBFFfNU9r6ihfei6VeJw"
-      - title: "facebook"
-        url: "https://www.facebook.com/johndoe"
-      - title: "twitter"
-        url: "https://www.twitter.com/johndoe"
-      - title: "behance"
-        url: "https://behance.com/johndoe"
-      - title: "instagram"
-        url: "https://instagram.com/johndoe"
-      - title: "medium"
-        url: "https://medium.com/johndoe"
-      - title: "telegram"
-        url: "https://telegram.com/johndoe"
-      - title: "dribbble"
-        url: "https://dribbble.com/johndoe"
-      - title: "flickr"
-        url: "https://flickr.com/johndoe"
+patrickmedley:
+  name: Patrick Medley
+  username: patrickmedley
+  bio: "Hi I Patrick Medley, a Web Developer and more...."
+  site: pgmja.com
+  avatar: profile.png
+  email: patrickm@pgmja.com
+  social:
+    - title: "github"
+      url: "https://github.com/Patrizio-programs"
+    - title: "linkedin"
+      url: "https://www.linkedin.com/in/patrick-medley2497"
+    - title: "facebook"
+      url: "https://www.facebook.com/profile.php?id=100082245522864"
+    - title: "twitter"
+      url: "https://www.twitter.com/johndoe"
+    - title: "instagram"
+      url: "https://www.instagram.com/patriziothedev"
+    - title: "medium"
+      url: "https://medium.com/@all-interests"
 
 xplor4r:
    name: Sujay kundu
