--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ subtitle: A Portfolio Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://devpgmja.netlify.app/" # the base hostname & protocol for your site, e.g. https://example.github.io
+baseurl: "/" # the subpath of your site, e.g. /blog
 
 # Navigation
 urls:
@@ -65,7 +65,7 @@ author_project_details:
                 project_url: https://dishswapp.org
                 visibility: true
 
-                
+
               - project_thumbnail: hack4r.PNG
                 project_title: Hack4r
                 project_description: Collaborative Recipe Web App
