--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,11 @@ backend:
   branch: master
   site_domain: https://devpgmja.netlify.app
 
+publish_mode: editorial_workflow
+
+editorial_workflow:
+  preview_url: https://devpgmja.netlify.app/
+
 media_folder: "assets/img/posts" # Media files will be stored in the repo under images/uploads
 public_folder: "/assets/img/posts" # The src attribute for uploaded media will begin with /images/uploads
 publish_mode: editorial_workflow # To manage status (Edit, Draft, Publish)
