--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author_bio: Hello, my name is Patrick Medley and I am from Jamaica 🇯🇲. In 
 author_email: "patrickm@pgmja.com"
 author_location: Jamaica
 author_website_url: "pgmja.com"
-typewrite-text: 
+typewrite-text: Welcome to my website.
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
