--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,14 @@ author_work_experiences:
               company_url: https://google.com
               designation: Software Engineer
               description: Worked on various Google Products
-              visibility: true
+              visibility: false
+
             - company_name: Microsoft
               company_logo: microsoft.png
               company_url: https://microsoft.com
               designation: Azure Developer
               description: Worked on various Azure Cloud Products
-              visibility: true
+              visibility: false
 
 # Education
 author_education_details:
@@ -55,13 +56,13 @@ author_education_details:
                 college_url: https://mit.org
                 college_degree: CS Engineer
                 description: Bachelor of Technology
-                visibility: true
+                visibility: false
 
 # Projects
 author_project_details:
               - project_thumbnail: dishswapp.org
                 project_title: dishswapp
-                project_description: A Platform built for Gamers and Game Devs
+                project_description: Collaborative Recipe Web App
                 project_url: https://dishswapp.org
                 visibility: true
 
@@ -70,7 +71,7 @@ author_project_details:
                 project_title: Hack4r
                 project_description: Collaborative Recipe Web App
                 project_url: https://hack4r.com
-                visibility: true
+                visibility: false
 
 # social links
 twitter_username: johndoe
