--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author_email: "patrickm@pgmja.com"
 author_location: Jamaica
 author_website_url: "pgmja.com"
 typewrite-text: Welcome to my website.
-hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+hero_cover_img: background.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
