--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author_education_details:
 
 # Projects
 author_project_details:
-              - project_thumbnail: dishswapp.org
+              - project_thumbnail: dishswapp,jpg
                 project_title: dishswapp
                 project_description: Collaborative Recipe Web App
                 project_url: https://dishswapp.org
