--- a/_config.yml
+++ b/_config.yml
@@ -71,12 +71,12 @@ author_project_details:
 
 # social links
 twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
+github_username:  Patrizio-programs
+facebook_username: https://www.facebook.com/profile.php?id=100082245522864
+linkedin_username: https://www.linkedin.com/in/patrick-medley2497
 behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
+instagram_username: patriziothedev
+medium_username: all-interests
 
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
