--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author_project_details:
 twitter_username: johndoe
 github_username:  Patrizio-programs
 facebook_username: https://www.facebook.com/profile.php?id=100082245522864
-linkedin_username: https://www.linkedin.com/in/patrick-medley2497
+linkedin_username: patrick-medley2497
 behance_username: johndoe
 instagram_username: patriziothedev
 medium_username: all-interests
